Add Ethereum mainnet contract addresses /tokens endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,15 @@
-# Database
+# Database (required)
 DATABASE_URL=postgresql://user:password@localhost:5432/cc0strategy
 
-# RPC
-BASE_RPC_URL=https://mainnet.base.org
-BASE_WS_URL=wss://base-mainnet.g.alchemy.com/v2/YOUR_KEY
+# Multi-Chain RPC URLs
+# Base Mainnet (required for live protocol)
+BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/YOUR_KEY
 
-# Contract Addresses (Base mainnet)
-FACTORY_ADDRESS=0x...
-FEE_DISTRIBUTOR_ADDRESS=0x...
+# Ethereum Mainnet (optional until contracts deployed)
+ETH_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/YOUR_KEY
 
-# API
+# API Server
 PORT=3000
 
-# Indexer
-START_BLOCK=0
+# Note: Contract addresses are now in src/config.ts
+# No need to set them as environment variables
