--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "hono": "^4.6.20",
     "postgres": "^3.4.5",
+    "socket.io": "^4.7.4",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "viem": "^2.22.13"
